--- a/Proyecto/src/proyecto/Interfaz.form
+++ b/Proyecto/src/proyecto/Interfaz.form
@@ -27,10 +27,10 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="156" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="1" attributes="0">
-                          <Component id="btnTabla" alignment="1" min="-2" pref="80" max="-2" attributes="0"/>
-                          <Component id="btnGrafico" alignment="1" min="-2" pref="80" max="-2" attributes="0"/>
-                          <Component id="btnCaptura2" alignment="1" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                          <Component id="btnTabla" alignment="0" pref="80" max="32767" attributes="0"/>
+                          <Component id="btnGrafico" alignment="0" pref="80" max="32767" attributes="0"/>
+                          <Component id="btnCaptura2" alignment="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
@@ -47,9 +47,9 @@
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="75" max="-2" attributes="0"/>
               <Component id="btnCaptura2" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="btnTabla" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="btnGrafico" min="-2" max="-2" attributes="0"/>
